<resources>
    <string name="app_name">养老审核平台</string>
    <string name="user_name">用户名：</string>
    <string name="full_name">姓名：</string>
    <string name="user_pwd">密码：</string>
    <string name="time">时间：</string>
    <string name="user_login">登 录</string>
    <string name="user_remember_pwd">记住密码</string>
    <string name="user_find_pwd">找回密码?</string>
    <string name="user_name_is_null">用户名不能为空</string>
    <string name="user_pwd_is_null">密码不能为空</string>
    <string name="user_version">版本号：</string>
    <string name="new_version">最新版本号：</string>
    <string name="sp_saved_fail">数据保存失败 请重试</string>
    <string name="activity_face_auth">人脸鉴权</string>
    <string name="default_name">XXX</string>
    <string name="bed_count">床位</string>
    <string name="in_yard_count">在院人数：</string>
    <string name="in_yard_count_str">在院人数</string>
    <string name="out_yard_count">离院人数：</string>
    <string name="out_yard_count_str">离院人数</string>
    <string name="supplement">补录</string>
    <string name="check">核查</string>
    <string name="about">关于</string>
    <string name="main_page">主页</string>
    <string name="doing">进行中</string>
    <string name="finished">已完成</string>
    <string name="wait_supple">待补录</string>
    <string name="wait_supple_str">待补录：</string>
    <string name="wait_supple_count">待补录人数：</string>
    <string name="wait_check">待核查</string>
    <string name="wait_check_str">待核查：</string>
    <string name="wait_check_count">待核查人数：</string>
    <string name="had_supple">已补录</string>
    <string name="had_supple_str">已补录：</string>
    <string name="had_supple_count">已补录人数：</string>
    <string name="had_check">已核查</string>
    <string name="had_check_str">已核查：</string>
    <string name="had_check_count">已核查人数：</string>
    <string name="release_time">发布时间：</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="inyard_time">入院时间：</string>
    <string name="user_num">用户时间</string>
    <string name="supplementing">进行\n补录</string>
    <string name="re_supplement">重新\n补录</string>
    <string name="re_check">重新\n核查</string>
    <string name="supplement_info">补录\n信息</string>
    <string name="video_check">视频\n核查</string>
    <string name="sex">性别：</string>
    <string name="id_card">身份证：</string>
    <string name="reenter">重新\n录入</string>
    <string name="checking">进行\n核查</string>
    <string name="manual_checking">手动\n录入</string>
    <string name="click_reload">点击重试</string>
    <string name="make_sure">确\t认</string>
    <string name="completed">完\t成</string>
    <string name="retry">重\t试</string>
    <string name="click_take_photo">点击拍照</string>
    <string name="click_picture_take_photo">点击图案拍照</string>
    <string name="check_detail">核查详情</string>
    <string name="clickToTakeVideo">点击录像</string>
    <string name="clickToPreviewVideo">视频预览</string>
</resources>