<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="checkVm"
            type="com.llj.living.logic.vm.CheckDetailsVM" />

        <variable
            name="peopleBean"
            type="com.llj.living.data.bean.InfoByEntIdBean" />

        <variable
            name="time"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_base" />

        <FrameLayout
            android:id="@+id/takePhotoFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivOldManPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_person_pin_120" />

            <TextView
                android:id="@+id/tvTips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:paddingBottom="40dp"
                android:text="@string/click_picture_take_photo"
                android:textSize="14sp"
                android:visibility="@{checkVm.peopleInfoShowLiveData?View.INVISIBLE:View.VISIBLE}" />
        </FrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvCheckIdCard"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{peopleBean.id_number}"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/textView16" />

            <TextView
                android:id="@+id/tvCheckTime"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{time}"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{peopleBean.name}"
                android:textColor="@color/black_1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                app:layout_constraintBottom_toTopOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView16"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView21"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:gravity="center"
                android:text="@string/sex"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toEndOf="@id/tvFullName"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/tvSex"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{peopleBean.sex}"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/textView21" />

            <TextView
                android:id="@+id/tvTipsTakePhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="拍照获取信息"
                android:textColor="@color/qq_red_dark"
                android:textSize="18sp"
                android:visibility="@{checkVm.peopleInfoShowLiveData?View.INVISIBLE:View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/btn_login"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:visibility="invisible" />
    </LinearLayout>
</layout>