<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginVm"
            type="com.llj.living.logic.vm.LoginViewModel" />
        <variable
            name="app"
            type="com.llj.living.application.MyApplication" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include android:id="@+id/toolbar" layout="@layout/toolbar_base" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_user_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@mipmap/logo_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/et_user_name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:text="@={loginVm.userNameLiveData}"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:theme="@style/codeEdit"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_logo" />

        <EditText
            android:id="@+id/et_user_pwd_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:hint="@string/user_pwd"
            android:inputType="textPassword"
            android:text="@={loginVm.passWordLiveData}"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:theme="@style/codeEdit"
            app:layout_constraintTop_toBottomOf="@+id/et_user_name_login" />

        <CheckBox
            android:id="@+id/cb_rememb_pwd_login"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:checked="@={loginVm.rememberPwdLiveData}"
            android:hint="记住密码"
            android:textColorHint="@color/qq_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_user_pwd_login" />

        <Button
            android:id="@+id/bt_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_login"
            android:text="@string/user_login"
            android:onClick="@{()->loginVm.checkVersion()}"
            android:enabled="@{loginVm.passWordLiveData.length()>0 &amp;&amp; loginVm.userNameLiveData.length()>0}"
            android:textColor="#fff"
            android:textSize="22dp"
            app:layout_constraintTop_toBottomOf="@+id/cb_rememb_pwd_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_find_pwd"
            android:textSize="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/cb_rememb_pwd_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toEndOf="@+id/cb_rememb_pwd_login"
            app:layout_constraintTop_toTopOf="@+id/cb_rememb_pwd_login" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:layout_constraintTop_toBottomOf="@+id/bt_login_activity" />

        <TextView
            android:id="@+id/tv_version_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingEnd="12dp"
            android:text="@{@string/user_version(app.CURRENT_VERSION)}"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>