<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.llj.living.custom.ext.BdToolKt" />

        <variable
            name="entAddons"
            type="com.llj.living.data.bean.EntAddonsBean" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_baseline_help_24_orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@{entAddons.addons_name}"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_img"
                app:layout_constraintTop_toTopOf="@+id/iv_img" />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/finished"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStartDate"
                style="@style/ItemDataDarkText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{BdToolKt.convertMyTimeStr(entAddons.start_at)}"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintEnd_toStartOf="@+id/tv_state"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/tv_tittle" />

            <TextView
                android:id="@+id/tvEndDate"
                style="@style/ItemDataDarkText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{BdToolKt.convertMyTimeStr(entAddons.end_at)}"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="@+id/tvEndTime"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

            <TextView
                android:id="@+id/tv_wait_type_str"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wait_check_str"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/tvItemWait"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(entAddons.people_count)}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_wait_type_str"
                app:layout_constraintStart_toEndOf="@+id/tv_wait_type_str"
                app:layout_constraintTop_toTopOf="@+id/tv_wait_type_str" />

            <TextView
                android:id="@+id/tv_had_type_str"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/had_check_str"
                app:layout_constraintBottom_toBottomOf="@+id/tvItemWait"
                app:layout_constraintStart_toEndOf="@+id/tvItemWait"
                app:layout_constraintTop_toTopOf="@+id/tvItemWait" />

            <TextView
                android:id="@+id/tvItemHad"
                style="@style/ItemDataCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(entAddons.people_reput_count)}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_had_type_str"
                app:layout_constraintStart_toEndOf="@+id/tv_had_type_str"
                app:layout_constraintTop_toTopOf="@+id/tv_had_type_str" />

            <TextView
                android:id="@+id/textView14"
                style="@style/ItemDataDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/start_time"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/tv_tittle"
                app:layout_constraintTop_toBottomOf="@+id/tv_tittle" />

            <TextView
                android:id="@+id/textView15"
                style="@style/ItemDataDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/end_time"
                app:layout_constraintBottom_toTopOf="@+id/tv_wait_type_str"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>