<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="2dp"
    android:background="@color/qq_blue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/iv_logo_header"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="35dp"
        android:src="@mipmap/logo_main"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="补录标题0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_logo_header"
        app:layout_constraintTop_toTopOf="@+id/iv_logo_header" />

    <TextView
        android:id="@+id/tv_address_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:maxLines="2"
        android:text="辽宁省葫芦岛市龙港区135135135和昆明135"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_title_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_header" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <TextView
        android:id="@+id/tv_bed_count_str_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bed_count"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_in_yard_str_header"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_in_yard_str_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_yard_count"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bed_count_str_header"
        app:layout_constraintEnd_toStartOf="@+id/tv_out_yard_str_header"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_bed_count_str_header"
        app:layout_constraintTop_toTopOf="@+id/tv_bed_count_str_header" />

    <TextView
        android:id="@+id/tv_out_yard_str_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_yard_count"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_in_yard_str_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_in_yard_str_header"
        app:layout_constraintTop_toTopOf="@+id/tv_in_yard_str_header" />

    <TextView
        android:id="@+id/tv_bed_count_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="103"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_bed_count_str_header"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/tv_bed_count_str_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_bed_count_str_header"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/tv_in_yard_count_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="256"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bed_count_header"
        app:layout_constraintEnd_toEndOf="@+id/tv_in_yard_str_header"
        app:layout_constraintStart_toStartOf="@+id/tv_in_yard_str_header"
        app:layout_constraintTop_toTopOf="@+id/tv_bed_count_header" />

    <TextView
        android:id="@+id/tv_out_yard_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="995"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_in_yard_count_header"
        app:layout_constraintEnd_toEndOf="@+id/tv_out_yard_str_header"
        app:layout_constraintStart_toStartOf="@+id/tv_out_yard_str_header"
        app:layout_constraintTop_toTopOf="@+id/tv_in_yard_count_header" />

    <View
        android:id="@+id/divider2"
        android:layout_width="6dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_bed_count_header"
        app:layout_constraintEnd_toStartOf="@+id/tv_in_yard_str_header"
        app:layout_constraintStart_toEndOf="@+id/tv_bed_count_str_header"
        app:layout_constraintTop_toTopOf="@+id/tv_bed_count_str_header" />

    <View
        android:id="@+id/divider3"
        android:layout_width="6dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_in_yard_count_header"
        app:layout_constraintEnd_toStartOf="@+id/tv_out_yard_str_header"
        app:layout_constraintStart_toEndOf="@+id/tv_in_yard_str_header"
        app:layout_constraintTop_toTopOf="@+id/tv_in_yard_str_header" />

</androidx.constraintlayout.widget.ConstraintLayout>